Gap in logo #5 has resolved

--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ body {
 }
 
 .icon {
+    display: flex;
+    flex-direction: column;
     margin: 2px;
     padding-right: 20px;
 }
@@ -500,6 +502,8 @@ body {
 }
 @media(max-width:1024px){
     .icon {
+        display: flex;
+        flex-direction: column;
         margin: 2px;
         padding-right: 0px;
     }
